--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "private": true,
   "scripts": {
     "watch": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "config/":"npx eslint config\/**",
+    "controllers/":"npx eslint controllers\/**",
+    "models/":"npx eslint models\/**",
+    "config/Fix":"npx eslint config\/** --fix",
+    "controllers/Fix":"npx eslint controllers\/** --fix",
+    "models/Fix":"npx eslint models\/** --fix"
   },
   "dependencies": {
     "cookie-parser": "1.4.4",
@@ -17,6 +23,6 @@
     "mysql": "2.18.1"
   },
   "devDependencies": {
-    "webpack-cli": "^4.9.2"
+    "eslint": "^8.12.0"
   }
 }
