--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "watch": "nodemon ./bin/www",
     "start": "node ./bin/www",
-    "config/":"npx eslint config\/**",
-    "controllers/":"npx eslint controllers\/**",
-    "models/":"npx eslint models\/**",
-    "config/Fix":"npx eslint config\/** --fix",
-    "controllers/Fix":"npx eslint controllers\/** --fix",
-    "models/Fix":"npx eslint models\/** --fix"
+    "config/": "npx eslint config/**",
+    "controllers/": "npx eslint controllers/**",
+    "models/": "npx eslint models/**",
+    "config/Fix": "npx eslint config/** --fix",
+    "controllers/Fix": "npx eslint controllers/** --fix",
+    "models/Fix": "npx eslint models/** --fix"
   },
   "dependencies": {
     "cookie-parser": "1.4.4",
@@ -23,6 +23,8 @@
     "mysql": "2.18.1"
   },
   "devDependencies": {
-    "eslint": "^8.12.0"
+    "eslint": "^8.12.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
