--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mysql": "2.18.1"
   },
   "devDependencies": {
-    "eslint": "^8.12.0",
-    "tailwindcss": "^3.0.23"
+    "eslint": "8.12.0",
+    "tailwindcss": "3.0.23"
   }
 }
